[gd_scene load_steps=6 format=2]

[ext_resource path="res://gui/sprites/slingshot_button.png" type="Texture" id=1]
[ext_resource path="res://gui/GuiController.gd" type="Script" id=2]
[ext_resource path="res://gui/sprites/ant.png" type="Texture" id=3]
[ext_resource path="res://gui/sprites/poison_button.png" type="Texture" id=4]
[ext_resource path="res://gui/Gui.gd" type="Script" id=6]

[node name="Gui" type="CanvasLayer"]
script = ExtResource( 6 )

[node name="GuiController" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -720.0
margin_bottom = -1280.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="GuiController"]
margin_top = 1180.0
margin_right = 720.0
margin_bottom = 1280.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PoisonButton" type="TextureButton" parent="GuiController/HBoxContainer"]
margin_right = 200.0
margin_bottom = 100.0
texture_normal = ExtResource( 4 )

[node name="AntButton" type="TextureButton" parent="GuiController/HBoxContainer"]
margin_left = 204.0
margin_right = 404.0
margin_bottom = 100.0
texture_normal = ExtResource( 3 )

[node name="SlingshotButton" type="TextureButton" parent="GuiController/HBoxContainer"]
margin_left = 408.0
margin_right = 608.0
margin_bottom = 100.0
texture_normal = ExtResource( 1 )
[connection signal="button_down" from="GuiController/HBoxContainer/PoisonButton" to="GuiController" method="_on_PoisonButton_button_down"]
[connection signal="button_up" from="GuiController/HBoxContainer/PoisonButton" to="GuiController" method="_clear_state"]
[connection signal="button_down" from="GuiController/HBoxContainer/AntButton" to="GuiController" method="_on_AntButton_button_down"]
[connection signal="button_up" from="GuiController/HBoxContainer/AntButton" to="GuiController" method="_clear_state"]
[connection signal="button_down" from="GuiController/HBoxContainer/SlingshotButton" to="GuiController" method="_on_SlingshotButton_button_down"]
[connection signal="button_up" from="GuiController/HBoxContainer/SlingshotButton" to="GuiController" method="_clear_state"]
